testdata/scenarios/00-simple/k8s/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
  namespace: kgateway-system
spec:
  allowedListeners:
    namespaces:
      from: All
  gatewayClassName: enterprise-kgateway
  listeners:
  - protocol: HTTP
    port: 80
    name: http-api
    hostname: api.example.com
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
